--- a/index.html
+++ b/index.html
@@ -13,25 +13,116 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Righteous&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap">
   <link rel="stylesheet" href="/index.css">
 
 </head>
 
 <body>
 
-  <!-- HEADER ==================================================================================== -->
-
-  <header>HEADER</header>
-
   <!-- MAIN ====================================================================================== -->
 
-  <main>
-    MAIN
+  <main class="grid grid-whole">
+
+    <!-- GRID UPPER ====================================================================== -->
+
+    <div class="area area-a">
+      <div class="grid grid-upper">
+
+        <!-- Header ================================================================ -->
+
+        <div class="area area-a">
+          <div class="row">
+            <div class="col-6 m-auto">
+              <div class="cell cell-header">
+
+                <p class="m-0">Weekly Weather</p>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Search ================================================================ -->
+
+        <div class="area area-b">
+          <div class="cell cell-search">
+
+            <p class="m-0">Search</p>
+
+          </div>
+        </div>
+
+        <!-- Favorite ============================================================== -->
+
+        <div class="area area-c">
+          <div class="cell cell-PLACEHOLDER">
+
+            STAR
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- GRID LOWER ====================================================================== -->
+
+    <div class="area area-b">
+      <div class="grid grid-lower">
+
+        <!-- Favorites ============================================================= -->
+
+        <div class="area area-a">
+          <div class="cell cell-favorites">
+
+            <p class="m-0">STAR - CITY</p>
+
+          </div>
+        </div>
+
+        <!-- Current Info ========================================================== -->
+
+        <div class="area area-b">
+          <div class="grid grid-current">
+
+            <div class="area area-a">
+              <div class="cell cell-current-upper">
+
+                <p class="m-0">CITY</p>
+                <p class="m-0">TIME</p>
+
+              </div>
+            </div>
+
+            <div class="area area-b">
+              <div class="cell cell-current-lower">
+
+                <p class="m-0">ICON - TEMP/CONDITION - HI/LO</p>
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <!-- Week Info ============================================================= -->
+
+        <div class="area area-c">
+          <div class="grid grid-week">
+
+            WEEK
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+
   </main>
-
-  <!-- FOOTER ==================================================================================== -->
-
-  <footer>FOOTER</footer>
 
   <!-- SCRIPT ==================================================================================== -->
 
