--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <!-- Header ================================================================ -->
 
         <div class="area area-a">
-          <div class="row">
-            <div class="col-6 m-auto">
+          <div class="grid grid-header">
+            <div class="area area-a">
               <div class="cell cell-header">
 
                 <p class="m-0">Weekly Weather</p>
@@ -49,9 +49,23 @@
         <!-- Search ================================================================ -->
 
         <div class="area area-b">
-          <div class="cell cell-search">
+          <div class="grid grid-search">
 
-            <p class="m-0">Search</p>
+            <div class="area area-a">
+              <div class="cell cell-PLACEHOLDER">
+
+                <p class="m-0">ICON</p>
+
+              </div>
+            </div>
+
+            <div class="area area-b">
+              <div class="cell cell-PLACEHOLDER">
+
+                <input type="text" class="form-control form-control-lg" id="i-txt-search" placeholder="Search">
+
+              </div>
+            </div>
 
           </div>
         </div>
@@ -61,7 +75,7 @@
         <div class="area area-c">
           <div class="cell cell-PLACEHOLDER">
 
-            STAR
+            <img src="/assets/icons/01d.png" alt="TODO">
 
           </div>
         </div>
@@ -79,6 +93,10 @@
         <div class="area area-a">
           <div class="cell cell-favorites">
 
+            <p class="m-0">STAR - CITY</p>
+            <p class="m-0">STAR - CITY</p>
+            <p class="m-0">STAR - CITY</p>
+            <p class="m-0">STAR - CITY</p>
             <p class="m-0">STAR - CITY</p>
 
           </div>
@@ -114,7 +132,65 @@
         <div class="area area-c">
           <div class="grid grid-week">
 
-            WEEK
+            <div class="area area-a">
+              <div class="cell cell-week-day">
+
+                <p class="m-0">DAY</p>
+                <p class="m-0">ICON</p>
+                <p class="m-0">CONDITION</p>
+                <p class="m-0">HI</p>
+                <p class="m-0">LO</p>
+
+              </div>
+            </div>
+
+            <div class="area area-b">
+              <div class="cell cell-week-day">
+
+                <p class="m-0">DAY</p>
+                <p class="m-0">ICON</p>
+                <p class="m-0">CONDITION</p>
+                <p class="m-0">HI</p>
+                <p class="m-0">LO</p>
+
+              </div>
+            </div>
+
+            <div class="area area-c">
+              <div class="cell cell-week-day">
+
+                <p class="m-0">DAY</p>
+                <p class="m-0">ICON</p>
+                <p class="m-0">CONDITION</p>
+                <p class="m-0">HI</p>
+                <p class="m-0">LO</p>
+
+              </div>
+            </div>
+
+            <div class="area area-d">
+              <div class="cell cell-week-day">
+
+                <p class="m-0">DAY</p>
+                <p class="m-0">ICON</p>
+                <p class="m-0">CONDITION</p>
+                <p class="m-0">HI</p>
+                <p class="m-0">LO</p>
+
+              </div>
+            </div>
+
+            <div class="area area-e">
+              <div class="cell cell-week-day">
+
+                <p class="m-0">DAY</p>
+                <p class="m-0">ICON</p>
+                <p class="m-0">CONDITION</p>
+                <p class="m-0">HI</p>
+                <p class="m-0">LO</p>
+
+              </div>
+            </div>
 
           </div>
         </div>
