--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="area area-a">
               <div class="cell">
 
-                <img src="/assets/icons/01d.png" alt="Search">
+                <img height="48px" src="/assets/search.png" alt="Search">
 
               </div>
             </div>
@@ -75,7 +75,7 @@
         <div class="area area-c">
           <div class="cell cell-header-fav">
 
-            <img src="/assets/icons/01d.png" alt="Favorite">
+            <img height="64px" src="/assets/star-dull.png" alt="Favorite">
 
           </div>
         </div>
@@ -99,7 +99,7 @@
                 <div class="area area-a">
                   <div class="cell cell-fav-icon">
 
-                    <img src="/assets/icons/01d.png" alt="Unfavorite">
+                    <img height="64px" src="/assets/star-fill.png" alt="Unfavorite">
 
                   </div>
                 </div>
@@ -121,7 +121,7 @@
                 <div class="area area-a">
                   <div class="cell cell-fav-icon">
 
-                    <img src="/assets/icons/01d.png" alt="Unfavorite">
+                    <img height="64px" src="/assets/star-fill.png" alt="Unfavorite">
 
                   </div>
                 </div>
@@ -143,7 +143,7 @@
                 <div class="area area-a">
                   <div class="cell cell-fav-icon">
 
-                    <img src="/assets/icons/01d.png" alt="Unfavorite">
+                    <img height="64px" src="/assets/star-fill.png" alt="Unfavorite">
 
                   </div>
                 </div>
@@ -165,7 +165,7 @@
                 <div class="area area-a">
                   <div class="cell cell-fav-icon">
 
-                    <img src="/assets/icons/01d.png" alt="Unfavorite">
+                    <img height="64px" src="/assets/star-fill.png" alt="Unfavorite">
 
                   </div>
                 </div>
@@ -187,7 +187,7 @@
                 <div class="area area-a">
                   <div class="cell cell-fav-icon">
 
-                    <img src="/assets/icons/01d.png" alt="Unfavorite">
+                    <img height="64px" src="/assets/star-fill.png" alt="Unfavorite">
 
                   </div>
                 </div>
@@ -234,8 +234,8 @@
                 <div class="area area-b">
                   <div class="cell">
 
-                    <p class="m-0" id="o-txt-curr-temp">TEMP</p>
-                    <p class="m-0" id="o-txt-curr-cond">COND</p>
+                    <p class="mt-3 mb-3" id="o-txt-curr-temp">TEMP</p>
+                    <p class="mb-3" id="o-txt-curr-cond">COND</p>
 
                   </div>
                 </div>
@@ -243,8 +243,8 @@
                 <div class="area area-c">
                   <div class="cell">
 
-                    <p class="m-0" id="o-txt-curr-hi">HI</p>
-                    <p class="m-0" id="o-txt-curr-lo">LO</p>
+                    <p class="mt-3 mb-3" id="o-txt-curr-hi">HI</p>
+                    <p class="mb-3" id="o-txt-curr-lo">LO</p>
 
                   </div>
                 </div>
